# dans-datastation-tools

./: index.html  pyproject.toml  sitemap.xml
.github/workflows/: coverage.yml
dev/: index.html
search/: search_index.json
src/datastation/: batch_processing.py  deposit_clean_data.py  deposit_create_report.py  deposit_data_cleaner.py  dv_api.py  dv_dataset_delete_draft.py  dv_dataset_destroy.py  dv_dataset_destroy_migration_placeholder.py  dv_dataset_edit_metadata.py  dv_dataset_get_attributes.py  dv_dataset_get_metadata_export.py  dv_dataset_publish.py  dv_dataset_reindex.py  dv_dataset_reingest_tabular.py  dv_dataset_role_assignment.py  dv_dataset_update_datacite.py  dv_dataverse_role_assignment.py  example-dans-datastation-tools.yml  open_access_archeodepot.py
src/datastation/common/: batch_processing.py  send_mail.py  utils.py
src/datastation/dataverse/: banner_api.py  dataset_api.py  datasets.py  dataverse_api.py  dataverse_client.py  file_api.py  metrics_api.py  permissions_collect.py  roles.py  search_api.py
src/datastation/managedeposit/: compose_curl_request.py  manage_deposit.py
src/datastation/scripts/: add_metadata_field.py  add_role_assignments.py  convert_dataset_metadatafiles.py  delete_draft_datasets.py  delete_role_assignments.py  dv_banner.py  find_datasets_with_roleassignment.py  fix_provenance_files.py  import_user.py  manage_deposit_cleaner.py  manage_deposit_reporter.py  oai_harvest.py  open_access_archeodepot.py  publish_datasets.py  reindex_datasets.py  replace_metadata_field_values.py  retrieve_dataset_metadata.py  retrieve_dataset_metadata_field.py  retrieve_dataset_pids.py  unlock_datasets.py  update_datacite_records.py
src/tests/: test_batch_processing.py  test_datasets.py
