[tool.poetry]
name = "dans-datastation-tools"
version = "0.6.0"
description = "Command line utilities for Data Station application management"
authors = ["DANS-KNAW"]
packages = [
    { include = "datastation", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
lxml = "^4.8.0"
dicttoxml = "^1.7.4"
pyYAML = "^6.0"
psycopg = "^3.0.16"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "==1.3.0"
psycopg_binary = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# TODO: figure out which of the scripts to keep and how to name them in a consistent way
#oai-harvest = "datastation.scripts.oai_harvest:main"
#publish-datasets = "datastation.scripts.publish_datasets:main"
dv-replace-metadata-field-values = "datastation.scripts.replace_metadata_field_values:main"
dv-unlock-datasets = "datastation.scripts.unlock_datasets:main"
update-datacite-records = "datastation.scripts.update_datacite_records:main"
dv-convert-dataset-metadatafiles="datastation.scripts.convert_dataset_metadatafiles:main"
dv-delete-draft-datasets="datastation.scripts.delete_draft_datasets:main"
dv-delete-role-assignment="datastation.scripts.delete_role_assignments:main"
dv-reindex-datasets="datastation.scripts.reindex_datasets:main"
dv-retrieve-dataset-pids="datastation.scripts.retrieve_dataset_pids:main"
dv-retrieve-dataset-metadata="datastation.scripts.retrieve_dataset_metadata:main"
dv-retrieve-dataset-metadata-field="datastation.scripts.retrieve_dataset_metadata_field:main"
dv-import-users="datastation.scripts.import_user:main"
dv-prestage-files="datastation.scripts.prestage_files:main"
